# rustbase

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  example.env  local.env  rocket.toml
.github/workflows/: deploy.yml  main.yml  rust.yml
data/base/16384/: 1247  1249  1249_fsm  1255  1255_vm  1259  1259_fsm  16388  16392  16499  16508  2224  2579  2604  2606  2608  2610  2619  2619_fsm  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2690  2691  2696  2699  2701  2702  (+6 more)
data/global/: 1260  1262  2671  pg_control
data/pg_stat/: pgstat.stat
data/pg_xact/: 0000
init/: mongo-init.js
migration/src/: lib.rs
migrations/2023-02-11-142755_create_collections/: down.sql  up.sql
migrations/2023-02-11-142755_create_document/: down.sql  up.sql
migrations/2023-02-23-142528_schema/: down.sql  up.sql
migrations/2023-02-23-142625_documents_to_schemas/: down.sql  up.sql
migrations/2023-02-27-134121_records/: down.sql  up.sql
src/: filter_parser.pest  lib.rs  main.rs  models.rs  schema.rs
src/entities/: document.rs  mod.rs  prelude.rs  record.rs  schema.rs  sea_orm_active_enums.rs
src/entities/collectionsLoad/: mod.rs
src/lib/: authorized.rs  mod.rs  result.rs  userAuthorized.rs
src/lib/counter/: mod.rs
src/lib/data/: mod.rs
src/lib/encryption/: mod.rs
src/lib/filter/: mod.rs
src/lib/jwt/: mod.rs  tokens.rs
src/lib/jwt/controllers/: refresh_access_token.rs
src/lib/jwt_token/: mod.rs
src/lib/utils/: mod.rs
src/models/: mod.rs
src/models/api/: mod.rs
src/models/api_response/: mod.rs
src/models/collection/: mod.rs
src/models/rules/: mod.rs
src/routes/: admins.rs  collections.rs  mod.rs  records.rs  users.rs
src/routes/api/: mod.rs
src/routes/api/admins/: mod.rs
src/routes/api/collections/: mod.rs
src/routes/api/users/: mod.rs
src/routes/get/: mod.rs
src/routes/post/: mod.rs
src/tests/: mod.rs
