[package]
name = "rustplatform"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]

serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15"
serde_json = "1.0"
rocket =  {version = "0.5.0-rc.2" , features = ["secrets","json"]}
testcontainers = "0.14.0"
chrono = {version = "0.4.3",features = ["serde"]}
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["tera"] }
sea-orm = { version = "^0.11.1", features = ["sqlx-postgres", "with-time", "with-chrono", "with-json", "with-uuid","runtime-tokio"] }
sea-orm-cli = "0.11.1"



